- removed game version dependency (I forgot to update it the last few updates anyway)
- yet another attempt at fixing these crawl multiplayer issues