@@ -16,6 +16,8 @@ namespace Verticality.Moves.Crawl
         EntityProperties baseProperties;
 
         bool DidKeyPress;
+        private bool sneakPressed;
+        
         public bool IsCrawling
         {
             get
@@ -37,7 +39,7 @@ namespace Verticality.Moves.Crawl
         }
 
         private bool IsClientCrawling;
-
+        private long doubleTapTime;
 
         public EntityBehaviorCrawl(Entity entity) : base(entity) { }
 
@@ -151,9 +153,39 @@ namespace Verticality.Moves.Crawl
             if (VerticalityModSystem.ClientConfig.combinationCrawlKeys)
                 if (capi.Input.IsHotKeyPressed("climb") && capi.Input.IsHotKeyPressed("sneak"))
                     return true;
+            
             if (VerticalityModSystem.ClientConfig.dedicatedCrawlKey)
                 if (capi.Input.IsHotKeyPressed("crawl"))
                     return true;
+
+            if (VerticalityModSystem.ClientConfig.standOnJump)
+                if (IsCrawling)
+                    if (capi.Input.IsHotKeyPressed("jump"))
+                        return true;
+
+            if (VerticalityModSystem.ClientConfig.doubleTapSneakToCrawl)
+                if (!IsCrawling)
+                {
+                    if (capi.Input.IsHotKeyPressed("sneak"))
+                    {
+                        if (!sneakPressed)
+                        {
+                            sneakPressed = true;
+
+                            if (capi.ElapsedMilliseconds < doubleTapTime)
+                            {
+                                return true;
+                            } else
+                            {
+                                doubleTapTime = capi.ElapsedMilliseconds + VerticalityModSystem.ClientConfig.doubleTapSpeed;
+                            }
+                        }
+                    } else
+                    {
+                        sneakPressed = false;
+                    }
+                }
+            
             return false;
         }
 
