@@ -1,2 +1,7 @@
-- removed game version dependency (I forgot to update it the last few updates anyway)
-- yet another attempt at fixing these crawl multiplayer issues
+- Changed how I do versioning; please don't be alarmed by the sudden jump by 3 minor versions
+
+- Patched up some cases where you could grab through another block
+- Now possible to grab overhangs (currently somewhat limited, needs more work)
+
+- Added option for player to stop crawling when pressing jump (enabled by default)
+- Added option for player to start crawling by double-tapping sneak (disabled by default)
